<resources>
    <string name="app_name">My Application</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="interest">Interest</string>
    <string name="car_loan">Car Loan</string>
    <string name="car_price">Car Price</string>
    <string name="down_payment_amount">Down Payment Amount</string>
    <string name="loan_period">Loan Period (year)</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="car_price_input_text" />
    <string name="cal_btn_text">Calculate</string>
</resources>
